# comprog

./: .gitignore  BigInt.h  CMakeLists.txt  checker.cpp  congruences.cpp  echo.cpp  echomaker.py  gen.cpp  gen1.cpp  main.cpp  me.in  me.out  modular.cpp  plot.py  randscript.py  rtestcpp.cpp  runfio.py  sptable.cpp  stdc++.h  stresstst.cpp  test.cpp  test.py  testpy.py  tstthelib.cpp  val.py  validator.cpp
DS/: Segtree.cpp  congruences.cpp  hashes.cpp  modular.cpp
lcpredictor/: gather.py  main.py  rankings.in
